# audiobooker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: docker-publish.yml
backend/: Cargo.toml
backend/migrations/: 001_init.sql  002_libraries.sql  003_library_abs_path.sql  004_pack_items.sql  005_notification_prefs.sql  006_abs_user_sync.sql  007_item_sources.sql  008_rate_limits.sql  009_roles_approvals.sql  010_abb_cache.sql
backend/src/: abb.rs  abb_cache.rs  abs_users.rs  auth.rs  config.rs  db.rs  error.rs  files.rs  limits.rs  magnet.rs  main.rs  metadata.rs  models.rs  push.rs  qbittorrent.rs  state.rs  worker.rs
backend/src/routes/: abb.rs  api_key.rs  auth.rs  downloads.rs  libraries.rs  metadata.rs  mod.rs  push.rs  settings.rs  setup.rs  spa.rs  users.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: BottomNavIcon.svelte  CreatedBy.svelte  api.ts  push.ts  roles.ts  session.ts  sw.ts  toast.ts
frontend/src/pages/: ApiKey.svelte  Approvals.svelte  Browse.svelte  ChangePassword.svelte  Dashboard.svelte  Login.svelte  MapPack.svelte  Match.svelte  Settings.svelte  Setup.svelte  Users.svelte
src/: instrumentation.ts  middleware.ts
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/: auth-form.tsx  dashboard.tsx
src/lib/: env.ts  magnet.ts
src/lib/auth/: session.ts  (+2 more)
(+11 files in other folders)
