[package]
name = "audiobooker"
version = "2.0.0"
edition = "2021"
description = "Low-resource audiobook download manager for Audiobookshelf"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
mime_guess = "2"
url = "2"
urlencoding = "2"
regex = "1"
scraper = "0.23"
base64 = "0.22"
web-push = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
time = "0.3"
futures = "0.3"
tokio-util = "0.7"
isahc = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
